--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  Test
-  </body>
+<html lang="ja">
+	<head>
+		<meta charset="utf-8">
+		<title>WebApp技術調査</title>
+		<!--[if lt IE 9]>
+		<![endif]-->
+	</head>
+
+	<body>
+		<!----- ヘッダー ----->
+		<header></header>
+		<nav></nav>
+		<!----- ヘッダー END ----->
+		
+		<!----- メインコンテンツ ----->
+		<article>
+			<h1>WebApp技術調査</h1>
+			<section>
+				<a href="responsiveTest\index.html">レスポンシブ</a><br>
+			</section>
+		</article>
+		<!----- メインコンテンツ END ----->
+		
+		<!----- フッター ----->
+		<footer></footer>
+		<!----- フッター END ----->
+	</body>
 </html>
