--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<article>
 			<h1>WebApp技術調査</h1>
 			<section>
-				<a href="responsiveTest\index.html">レスポンシブ</a><br>
+				<a href="responsiveTest\index.html">WebApp技術調査</a><br>
 			</section>
 		</article>
 		<!----- メインコンテンツ END ----->
