--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 	</head>
 
 	<body>
-		<!----- ƒwƒbƒ_[ ----->
+		<!----- ãƒ˜ãƒƒãƒ€ãƒ¼ ----->
 		<header></header>
 		<nav></nav>
-		<!----- ƒwƒbƒ_[ END ----->
+		<!----- ãƒ˜ãƒƒãƒ€ãƒ¼ END ----->
 		
-		<!----- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc ----->
+		<!----- ãƒ¡ã‚¤ãƒ³ã‚³ãƒ³ãƒ†ãƒ³ãƒ„ ----->
 		<article>
 			<h1>WebAppTest</h1>
 			<section>
-				<a href="https://cloudsotsubo.github.io/WebAppTest/sampleProject/index.html">ƒTƒ“ƒvƒ‹ƒvƒƒWƒFƒNƒg</a><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/sampleProject/index.html">ã‚µãƒ³ãƒ—ãƒ«ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆ</a><br>
 			</section>
 		</article>
-		<!----- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc END ----->
+		<!----- ãƒ¡ã‚¤ãƒ³ã‚³ãƒ³ãƒ†ãƒ³ãƒ„ END ----->
 		
-		<!----- ƒtƒbƒ^[ ----->
+		<!----- ãƒ•ãƒƒã‚¿ãƒ¼ ----->
 		<footer></footer>
-		<!----- ƒtƒbƒ^[ END ----->
+		<!----- ãƒ•ãƒƒã‚¿ãƒ¼ END ----->
 	</body>
 </html>
