--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<h1>WebAppTest</h1>
 			<section>
 				<a href="https://cloudsotsubo.github.io/WebAppTest/sampleProject/index.html">サンプルプロジェクト</a><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/LaunchTimeTest.html">起動時間テスト</a><br>
 			</section>
 		</article>
 		<!----- メインコンテンツ END ----->
