--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 		
 		<!----- メインコンテンツ ----->
 		<article>
-			<h1>WebAppTest</h1>
+			<h1><font size="7">WebAppTest</font></h1>
 			<section>
+				<font size="5">
 				<a href="https://cloudsotsubo.github.io/WebAppTest/sampleProject/index.html">サンプルプロジェクト</a><br>
 				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/index.html">起動時間テスト</a><br>
+				</font>
 			</section>
 		</article>
 		<!----- メインコンテンツ END ----->
