--- a/LaunchTimeTest/index.html
+++ b/LaunchTimeTest/index.html
@@ -15,9 +15,11 @@
 		
 		<!----- メインコンテンツ ----->
 		<article>
-			<h1>WebAppTest</h1>
+			<h1><font size="7">起動時間テスト</font></h1>
 			<section>
+				<font size="5">
 				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/empty/index.html">空のプロジェクト</a><br>
+				</font>
 			</section>
 		</article>
 		<!----- メインコンテンツ END ----->
