--- a/LaunchTimeTest/index.html
+++ b/LaunchTimeTest/index.html
@@ -19,6 +19,7 @@
 			<section>
 				<font size="5">
 				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/empty/index.html">空のプロジェクト</a><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyScenes/index.html">シーンの多いプロジェクト</a><br>
 				</font>
 			</section>
 		</article>
