--- a/LaunchTimeTest/index.html
+++ b/LaunchTimeTest/index.html
@@ -18,8 +18,10 @@
 			<h1><font size="7">起動時間テスト</font></h1>
 			<section>
 				<font size="5">
-				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/empty/index.html">空のプロジェクト</a><br>
-				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyScenes/index.html">シーンの多いプロジェクト</a><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/empty/index.html">空のプロジェクト</a><br><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyScenes/index.html">シーンの多いプロジェクト</a><br><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyTextures/index.html">テクスチャの多いプロジェクト（シーンには未配置）</a><br><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyTextures_UsedSecondScene/index.html">テクスチャの多いプロジェクト（次のシーンに配置）</a><br><br>
 				</font>
 			</section>
 		</article>
