--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 		
 		<!----- メインコンテンツ ----->
 		<article>
-			<h1><font size="7">起動時間テスト</font></h1>
+			<h1><font size="7">WebAppTest</font></h1>
 			<section>
 				<font size="5">
-				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/empty/index.html">空のプロジェクト</a><br><br>
-				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyScenes/index.html">シーンの多いプロジェクト</a><br><br>
-				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyTextures/index.html">テクスチャの多いプロジェクト（シーンには未配置）</a><br><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/sampleProject/index.html">サンプルプロジェクト</a><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/index.html">起動時間テスト</a><br>
 				</font>
 			</section>
 		</article>
