--- a/LaunchTimeTest/index.html
+++ b/LaunchTimeTest/index.html
@@ -22,7 +22,8 @@
 				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyScenes/index.html">シーンの多いプロジェクト</a><br><br>
 				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyTextures/index.html">テクスチャの多いプロジェクト（シーンには未配置）</a><br><br>
 				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyTextures_UsedSecondScene/index.html">テクスチャの多いプロジェクト（次のシーンに配置）</a><br><br>
-				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyTextures_UsedSecondScene_disable/index.html">テクスチャの多いプロジェクト（次のシーンにヒアクティブで配置）</a><br><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyTextures_UsedSecondScene_disable/index.html">テクスチャの多いプロジェクト（次のシーンに非アクティブで配置）</a><br><br>
+				<a href="https://cloudsotsubo.github.io/WebAppTest/LaunchTimeTest/manyTextures_UsedSecondScene_Async/index.html">テクスチャの多いプロジェクト（AsyncLoadAssetsを有効化）</a><br><br>
 				</font>
 			</section>
 		</article>
